--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ built websites for small businesses and provided other website-related
 services (hosting, maintenance, social media management, email
 marketing, etc). It closed in 2015.
 </p><p>
-Mike and Alicia are now both employed at <a href="http://automattic.com">Automattic</a>, makers of
-WordPress.com - try using WordPress.com for your next project! You can
-still contact Mike at <a href="mailto:mike@reamplify.com">mike@reamplify.com</a>, and Alicia at
+You can still contact Mike at <a href="mailto:mike@reamplify.com">mike@reamplify.com</a>, and Alicia at
 <a href="mailto:alicia@reamplify.com">alicia@reamplify.com</a>, although they are not available for client work
 at this time.
 </p><p>
